# LLM-Agent-queryplan-eval

./: .env.example  .gitignore  API_FIX_SUMMARY.md  CUDA_SETUP.md  IMPLEMENTATION_COMPLETE.md  PROMPT_MANAGER_UPGRADE.md  README.md  TEST_INSTRUCTIONS.md  pyproject.toml  requirements.txt  run_1020_compare.sbatch  run_1021_compare.sh  run_plan_data_test.sh  test_gpu_setup.py  test_local_model.sbatch  watch_job.sh
.cursor/plans/: ---compute--33514843.plan.md  --307ff54d.plan.md  llm--82c47de7.plan.md  ragpromptmanager---49f5cea5.plan.md  ragtruth-1c5af75d.plan.md  ragtruth-task-implementation-a0c8032e.plan.md
docs/: IMPLEMENTATION_SUMMARY.md  PROMPT_MANAGER_MIGRATION.md  index.md  prompt_design.md  ragtruth_usage_guide.md
docs/ai/: 01_prompt_diff.md  02_analsys_prompt.md  03_cot_prompt.md
outputs/cot_v6/: llm_judgement_report.md
outputs/full/: llm_judgement_report.md
outputs/v5/: llm_judgement_report.md
prompts/: queryplan_system_prompt.j2
prompts/judgement/configs/: judgement.yaml
prompts/patent/configs/: patent.yaml
prompts/query_plan/configs/: query_plan.yaml
prompts/ragtruth/configs/: ragtruth.yaml
scripts/: analyze_prompts.py  download_hf_models.py  llm_judge.py  run_eval.py  run_eval_batch.py  run_eval_ragtruth.py  run_peptide.py  run_plan_data.py  test_cot_basic.py
src/: run_eval.py
src/queryplan_eval/: __init__.py  batch_handler.py  data_utils.py  renderer.py  schemas.py  schemas_plan_data.py
src/queryplan_eval/core/: __init__.py  base_llm.py  base_task.py  llm_factory.py  prompt_manager.py  unified_prompt_manager.py
src/queryplan_eval/datasets/: __init__.py  eval_results.py  peptide_patent.py  plan_data.py  query_plan.py  ragtruth.py  utils.py
src/queryplan_eval/llms/: __init__.py  huggingface_llm.py  openai_llm.py
src/queryplan_eval/metrics/: __init__.py  ragtruth_metrics.py  reward_calculator.py  span_utils.py
src/queryplan_eval/prompts/: queryplan_cot.j2  queryplan_system_prompt_v2.j2  queryplan_system_prompt_v3.j2  queryplan_system_prompt_v4.j2  queryplan_system_prompt_v5.j2
src/queryplan_eval/tasks/: __init__.py  peptide_task.py  plan_data_task.py  query_plan_task.py  ragtruth_task.py
src/queryplan_eval/tools/: __init__.py  pairwise_judge.py
tests/: conftest.py  test_dataset_split.py  test_peptide_patent.py  test_ragtruth.py  test_ragtruth_prompt_integration.py  test_ragtruth_task.py  test_unified_prompt_manager.py
(+19 files in other folders)
