[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queryplan-eval"
version = "0.1.0"
description = "QueryPlan-LLM Prompt A/B Evaluation Tool - 从自然语言查询中稳定抽取结构化计划的评测框架"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jieke Wu, SFB Lab, KAUST", email = "jieke.wu@kaust.edu.sa" },
]
keywords = [
    "llm",
    "query-plan",
    "prompt-engineering",
    "structured-generation",
    "evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "tqdm>=4.66",
    "openai>=1.46",
    "outlines[openai]>=1.0.7",
    "datasets>=4.2.0",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

gpu = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "accelerate>=1.11.0",
]

cpu = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
]

[project.scripts]
queryplan-eval = "queryplan_eval.run_eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src/queryplan_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src/queryplan_eval"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
